--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywors" content="oversize, buzos, REMERAS, pantalones, cargo, LEGION STYLE">
+    <meta name="description" content="Es una tienda online con que también cuenta con sucursal física y tiene envíos a todo el país.">
     <!-- INICIO DE BS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- FIN DE BS -->
