--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -22,16 +22,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/CONTACTO.HTML">CONTACTO</a>
+            <a class="nav-link" href="/PAGUINAS/contacto.html">CONTACTO</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/NOSOTROS.HTML">NOSOTROS</a>
+            <a class="nav-link" href="/PAGUINAS/nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/ENVIOS.HTML">ENVIOS</a>
+            <a class="nav-link" href="/PAGUINAS/envios.html">ENVIOS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/DIRECCION.HTML">DIRECCION</a>
+            <a class="nav-link" href="/PAGUINAS/direccion.html">DIRECCION</a>
             </li>
         </ul>
         </div>
