--- a/PAGUINAS/DIRECCION.HTML
+++ b/PAGUINAS/DIRECCION.HTML
@@ -20,16 +20,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link" href="/INDEX.HTML">HOME</a>
+            <a class="nav-link" href="/index.html">HOME</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/NOSOTROS.HTML">NOSOTROS</a>
+            <a class="nav-link" href="/PAGUINAS/nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/ENVIOS.HTML">ENVIOS</a>
+            <a class="nav-link" href="/PAGUINAS/envios.html">ENVIOS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/CONTACTO.HTML">CONTACTO</a>
+            <a class="nav-link" href="/PAGUINAS/contacto.html">CONTACTO</a>
             </li>
         </ul>
         </div>
