--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,7 +8,7 @@
     <!-- INICIO DE BS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- FIN DE BS -->
-    <link rel="stylesheet" href="ESTILOS.CSS">
+    <link rel="stylesheet" href="estilos.css">
     <title>LEGION</title>
 </head>
 <body>
