--- a/PAGUINAS/CONTACTO.HTML
+++ b/PAGUINAS/CONTACTO.HTML
@@ -7,7 +7,7 @@
     <!-- INICIO DE BS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- FIN DE BS -->
-    <link rel="stylesheet" href="/ESTILOS/CONTACTO.CSS">
+    <link rel="stylesheet" href="/ESTILOS/contacto.css">
     <title>CONTACTO</title>
 </head>
 <body>
