--- a/PAGUINAS/DIRECCION.HTML
+++ b/PAGUINAS/DIRECCION.HTML
@@ -6,7 +6,7 @@
     <!-- INICIO DE BS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- FIN DE BS -->
-    <link rel="stylesheet" href="/ESTILOS/DIRECCION.CSS">
+    <link rel="stylesheet" href="/ESTILOS/direccion.css">
     <title>DIRECCION</title>
 </head>
 <body>
