--- a/PAGUINAS/NOSOTROS.HTML
+++ b/PAGUINAS/NOSOTROS.HTML
@@ -9,7 +9,7 @@
     <!-- INICIO DE BS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- FIN DE BS -->
-    <link rel="stylesheet" href="/ESTILOS/NOSOTROS.CSS">
+    <link rel="stylesheet" href="/ESTILOS/nosotros.css">
     <title>NOSOTROS</title>
 </head>
 <body>
