--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- INICIO DE BARRA DE NAVEGACION -->
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">LEGION <span>STYLE</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -102,7 +102,7 @@
         <span class="visually-hidden">Next</span>
     </button>
     </div>
-    <p class="card-text">Descubre la nueva colección de Remra oversize, una marca que combina estilo, comodidad y calidad en cada una de sus prendas. Con una amplia variedad de diseños modernos y atemporales, Remra oversize se ha convertido en la elección preferida de quienes buscan prendas versátiles y con un toque único.
+    <p class="card-text">Descubre la nueva colección de Remeras oversize, una marca que combina estilo, comodidad y calidad en cada una de sus prendas. Con una amplia variedad de diseños modernos y atemporales, Remra oversize se ha convertido en la elección preferida de quienes buscan prendas versátiles y con un toque único.
 
     ofrecemos prendas para cada ocasión y estilo de vida. Confeccionadas con materiales de alta calidad y cuidando hasta el más mínimo detalle, las prendas de te brindarán un look impecable y sofisticado en todo momento.
         
