--- a/PAGUINAS/CONTACTO.HTML
+++ b/PAGUINAS/CONTACTO.HTML
@@ -37,7 +37,7 @@
     </div>
 </nav>
 <!-- FIN DE BARRA DE NAVEGACION -->
-<h1 class="text-center">CONTACTANOS POR NUESTRAS REDE SOCIALES</h1>
+<h1 class="text-center">CONTACTANOS POR NUESTRAS REDES SOCIALES</h1>
     <pre class="text-center">Contáctanos!
 
     ¡Estamos aquí para ti! disponible de lunes a sábado para atender tus consultas, resolver tus dudas y brindarte la mejor experiencia. ¡No dudes en ponerte en contacto con nosotros!
