--- a/PAGUINAS/NOSOTROS.HTML
+++ b/PAGUINAS/NOSOTROS.HTML
@@ -40,7 +40,7 @@
 </nav>
 <!-- FIN DE BARRA DE NAVEGACION -->
 <h1 class="text-center">QUIENES SOMOS</h1>
-<pre class="text-center">En el vibrante año 2021, Leguon Style nació con la visión de ofrecer una experiencia de moda única y auténtica para aquellos que buscan expresar su individualidad a través de su estilo personal. Desde nuestros humildes comienzos, nos hemos dedicado a romper con los estándares convencionales de la moda y celebrar la diversidad de cuerpos y estilos en nuestra comunidad.
+<pre class="text-center">En el vibrante año 2021, Legion Style nació con la visión de ofrecer una experiencia de moda única y auténtica para aquellos que buscan expresar su individualidad a través de su estilo personal. Desde nuestros humildes comienzos, nos hemos dedicado a romper con los estándares convencionales de la moda y celebrar la diversidad de cuerpos y estilos en nuestra comunidad.
 
     A lo largo del tiempo, hemos crecido y evolucionado, expandiendo nuestra colección para incluir una amplia variedad de estilos que van desde lo clásico y elegante hasta lo atrevido y vanguardista. Colaborando con diseñadores independientes y marcas emergentes, hemos logrado ofrecer a nuestros clientes una selección cuidadosamente curada de prendas de alta calidad que combinan comodidad, estilo y autenticidad.
     
