--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -130,9 +130,9 @@
         <img src="img/9.jpg" class="d-block w-25 mx-auto" alt="IMG 3">
         </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
+    <button class="carousel-control-prev"  type="button" data-bs-target="#carousel3" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden text-center">Previous</span>
+        <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
