--- a/PAGUINAS/DIRECCION.HTML
+++ b/PAGUINAS/DIRECCION.HTML
@@ -37,7 +37,8 @@
 </nav>
 <!-- FIN DE BARRA DE NAVEGACION -->
     <H1 class="text-center">LEGION STYLE</H1>
-    <pre class="text-center">"¡Te invitamos a visitar nuestra tienda física!, donde estaremos encantados de atenderte en los siguientes horarios: de lunes a sábado, de 8:00 a 12:00 y de 17:00 a 21:00.
+    <pre class="text-center">"¡Te invitamos a visitar nuestra tienda física!, donde estaremos encantados de atenderte en los siguientes horarios: de lunes a viernes, de 8:00 a 12:00 y de 17:00 a 21:00.
+    sábados, de 9:00 a 12:00 y de 17:00 a 22:30.
 
     En nuestra tienda, podrás encontrar una amplia variedad de productos de alta calidad y recibir asesoramiento especializado de nuestro equipo. Además, si necesitas realizar un encargo, puedes hacerlo en cualquier momento, ya sea a través de nuestra plataforma en línea o por teléfono.
     
