--- a/PAGUINAS/CONTACTO.HTML
+++ b/PAGUINAS/CONTACTO.HTML
@@ -12,13 +12,13 @@
 </head>
 <body>
     <!-- INICIO DE BARRA DE NAVEGACION -->
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-xl bg-dark navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">LEGION <span>STYLE</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
-        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse ml-auto justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
             <a class="nav-link" href="/index.html">HOME</a>
@@ -55,7 +55,7 @@
     </div>
     ¿Tienes alguna pregunta? Si tienes alguna consulta, inquietud o simplemente deseas saber más sobre nuestros productos y servicios, ¡no dudes en contactarnos! Estamos aquí para ayudarte en todo lo que necesites.
     
-    ¡Síguenos en redes sociales! ¿Quieres estar al tanto de nuestras ofertas, promociones y novedades? ¡Síguenos en nuestras redes sociales! Encuéntranos en [Redes sociales] y no te pierdas ninguna oportunidad de disfrutar de beneficios exclusivos.
+    ¡Síguenos en redes sociales! ¿Quieres estar al tanto de nuestras ofertas, promociones y novedades? ¡Síguenos en nuestras redes sociales! Encuéntranos en instagram o facebook como (Legion style) no te pierdas ninguna oportunidad de disfrutar de beneficios exclusivos.
     
     ¡Gracias por confiar en nosotros y ser parte de nuestra comunidad! ¡Esperamos poder atenderte pronto y brindarte la mejor experiencia!</pre>
 
