--- a/PAGUINAS/NOSOTROS.HTML
+++ b/PAGUINAS/NOSOTROS.HTML
@@ -14,13 +14,13 @@
 </head>
 <body>
 <!-- INICIO DE BARRA DE NAVEGACION --> 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-xl bg-dark navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">LEGION <span>STYLE</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
-        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse ml-auto justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
             <a class="nav-link" href="/index.html">HOME</a>
@@ -47,7 +47,7 @@
     Con cada año que pasa, hemos ganado la confianza y lealtad de una creciente comunidad de amantes de la moda que comparten nuestra pasión por la autoexpresión a través de la ropa. Nuestro compromiso con la inclusividad y la diversidad se refleja en cada aspecto de nuestra marca, desde nuestra tienda en línea hasta nuestros envíos a todo el país.
     
     En Leguon Style, creemos en la moda como una forma de empoderamiento y autoexpresión, y estamos comprometidos a seguir inspirando a nuestros clientes a abrazar su individualidad y celebrar su belleza única a través de la moda. Únete a nuestra historia en constante evolución y descubre el poder transformador de la moda oversize para expresar tu verdadera esencia. ¡Bienvenido a Legion Style, donde la moda se fusiona con la autenticidad, la diversidad y la pasión por el estilo personal!"</pre>
-<H1 class="text-center">SOBRE NOSOTROS</H1>
+<H2 class="text-center">SOBRE NOSOTROS</H2>
 <pre class="text-center">En Legion Style, nos dedicamos a ofrecer una experiencia única en moda para aquellos que buscan expresar su individualidad a través de su estilo personal. Con un enfoque en la moda oversize, nos esforzamos por romper con los estándares convencionales y celebrar la diversidad de cuerpos y estilos en nuestra comunidad.
 
     nuestra mision es garantizar calidad, comodidad y estilo en cada prenda que ofrecemos. Colaboramos con diseñadores independientes y marcas emergentes para ofrecer una amplia variedad de estilos que van desde lo clásico y elegante hasta lo atrevido y vanguardista.
