--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -13,13 +13,13 @@
 </head>
 <body>
 <!-- INICIO DE BARRA DE NAVEGACION -->
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+<nav class="navbar navbar-expand-xl bg-dark navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">LEGION <span>STYLE</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
-        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse ml-auto justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
             <a class="nav-link" href="/PAGUINAS/contacto.html">CONTACTO</a>
@@ -38,7 +38,6 @@
     </div>
 </nav>
 <!-- FIN DE BARRA DE NAVEGACION -->
-<!-- INICIO DE BODY -->
 <!-- CARRUCEL 1 INICIO -->
 <h2 class="text-center">BUZOS</h2>
 <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
@@ -153,7 +152,6 @@
         </div>
     </div>
     <!-- CARRUCEL 3 FIN -->
-<!-- FIN DE BODY -->
 
     <!-- inicio de js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
