--- a/PAGUINAS/DIRECCION.HTML
+++ b/PAGUINAS/DIRECCION.HTML
@@ -11,13 +11,13 @@
 </head>
 <body>
     <!-- INICIO DE BARRA DE NAVEGACION -->
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-xl bg-dark navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">LEGION <span>STYLE</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
-        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse ml-auto justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
             <a class="nav-link" href="/index.html">HOME</a>
