--- a/PAGUINAS/ENVIOS.HTML
+++ b/PAGUINAS/ENVIOS.HTML
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- INICIO DE BS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- FIN DE BS -->
@@ -11,13 +12,13 @@
 </head>
 <body>
     <!-- INICIO DE BARRA DE NAVEGACION -->
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-xl bg-dark navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">LEGION <span>STYLE</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
-        <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse ml-auto justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
             <a class="nav-link" href="/index.html">HOME</a>
@@ -46,6 +47,8 @@
     Envíos a todo el país ¡No importa en qué parte del país te encuentres! Realizamos envíos a todas las regiones, por lo que puedes disfrutar de nuestros productos estés donde estés. Ya sea en zonas urbanas o rurales, nuestro compromiso es llevarte tus compras hasta la puerta de tu hogar.
     
     ¿Necesitas más información? Si tienes alguna duda sobre nuestros métodos de envío, tiempos de entrega o cualquier otro aspecto relacionado, no dudes en contactarnos. Estamos aquí para brindarte toda la información que necesitas y garantizarte una experiencia de compra satisfactoria.
+
+    <div class="redes"><i class="bi bi-whatsapp"></i><a href="https://ww.whatsapp.com/" target="_blank"></i>whatsapp</a></div>
     
     ¡Gracias por elegirnos para tus compras en línea! Esperamos que disfrutes de nuestros productos y que la experiencia de recibir tu pedido sea tan placentera como la de elegirlo.</pre>
         <!-- inicio de js -->
