--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywors" content="oversize, buzos, REMERAS, pantalones, cargo, LEGION STYLE">
     <meta name="description" content="Es una tienda online con que también cuenta con sucursal física y tiene envíos a todo el país.">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- INICIO DE BS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- FIN DE BS -->
@@ -151,8 +152,44 @@
             </div>
         </div>
     </div>
-    <!-- CARRUCEL 3 FIN -->
+<!-- CARRUCEL 3 FIN -->
+<!-- INICIO DE CARDS -->
+<h2 class="text-center"> PROMOS</h2>
+<div class="card mx-auto text-center" data-aos="flip-left">
+    <h3 class="card-title">Card title</h3>
+    <img src="img/1.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+</div>
 
+<div class="card mx-auto text-center" data-aos="fade-up">
+    <h3 class="card-title">Card title</h3>
+    <img src="img/1.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+</div>
+
+<div class="card mx-auto text-center" data-aos="fade-left">
+    <h3 class="card-title">Card title</h3>
+    <img src="img/1.jpg" class="card-img-top mx-25 alt="...">
+    <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+</div>
+<!-- FIN DE CARDS -->
+
+
+<!-- INICIO DE AOS -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
+<!-- FIN DE AOS -->
     <!-- inicio de js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- fin de js -->
