--- a/index.html
+++ b/index.html
@@ -166,13 +166,12 @@
 
 <div class="card mx-auto text-center" data-aos="fade-up">
     <h3 class="card-title">Card title</h3>
-    <img src="img/1.jpg" class="card-img-top" alt="...">
+    <img src="img/1.jpg" class="card-img-top" alt="...">git remote -v
     <div class="card-body">
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
 </div>
-
 <div class="card mx-auto text-center" data-aos="fade-left">
     <h3 class="card-title">Card title</h3>
     <img src="img/1.jpg" class="card-img-top mx-25 alt="...">
@@ -182,7 +181,6 @@
     </div>
 </div>
 <!-- FIN DE CARDS -->
-
 
 <!-- INICIO DE AOS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
