--- a/PAGUINAS/direccion.html
+++ b/PAGUINAS/direccion.html
@@ -23,13 +23,13 @@
             <a class="nav-link" href="../index.html">HOME</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="./paguinas/nosotros.html">NOSOTROS</a>
+            <a class="nav-link" href="nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="./PAGUINAS/envios.html">ENVIOS</a>
+            <a class="nav-link" href="envios.html">ENVIOS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="./PAGUINAS/contacto.html">CONTACTO</a>
+            <a class="nav-link" href="contacto.html">CONTACTO</a>
             </li>
         </ul>
         </div>
