--- a/PAGUINAS/contacto.html
+++ b/PAGUINAS/contacto.html
@@ -24,13 +24,13 @@
             <a class="nav-link" href="../index.html">HOME</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+            <a class="nav-link" href="./nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="envios.html">ENVIOS</a>
+            <a class="nav-link" href="./envios.html">ENVIOS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="direccion.html">DIRECCION</a>
+            <a class="nav-link" href="./direccion.html">DIRECCION</a>
             </li>
         </ul>
         </div>
