--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         <div class="collapse navbar-collapse ml-auto justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link" href="/paguinas/contacto.html">CONTACTO</a>
+            <a class="nav-link" href="../paguinas/contacto.html">CONTACTO</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/nosotros.html">NOSOTROS</a>
+            <a class="nav-link" href="../PAGUINAS/nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/envios.html">ENVIOS</a>
+            <a class="nav-link" href="../PAGUINAS/envios.html">ENVIOS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="/PAGUINAS/direccion.html">DIRECCION</a>
+            <a class="nav-link" href="../PAGUINAS/direccion.html">DIRECCION</a>
             </li>
         </ul>
         </div>
