--- a/paguinas/nosotros.html
+++ b/paguinas/nosotros.html
@@ -26,13 +26,13 @@
             <a class="nav-link" href="../index.html">HOME</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="contacto.html">CONTACTO</a>
+            <a class="nav-link" href="./contacto.html">CONTACTO</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="envios.html">ENVIOS</a>
+            <a class="nav-link" href="./envios.html">ENVIOS</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="direccion.html">DIRECCION</a>
+            <a class="nav-link" href="./direccion.html">DIRECCION</a>
             </li>
         </ul>
         </div>
