--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 <div class="card mx-auto text-center" data-aos="fade-up">
     <h3 class="card-title">Card title</h3>
-    <img src="img/1.jpg" class="card-img-top" alt="...">git remote -v
+    <img src="img/1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -174,7 +174,7 @@
 </div>
 <div class="card mx-auto text-center" data-aos="fade-left">
     <h3 class="card-title">Card title</h3>
-    <img src="img/1.jpg" class="card-img-top mx-25 alt="...">
+    <img src="img/1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
