--- a/paguinas/envios.html
+++ b/paguinas/envios.html
@@ -7,7 +7,7 @@
     <!-- INICIO DE BS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- FIN DE BS -->
-    <link rel="stylesheet" href="/ESTILOS/envios.css">
+    <link rel="stylesheet" href="./estilos/envios.css">
     <title>ENVIOS</title>
 </head>
 <body>
