--- a/paguinas/nosotros.html
+++ b/paguinas/nosotros.html
@@ -9,7 +9,7 @@
     <!-- INICIO DE BS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- FIN DE BS -->
-    <link rel="stylesheet" href="./estilos/nosotros.css">
+    <link rel="stylesheet" href="../estilos/nosotros.css">
     <title>NOSOTROS</title>
 </head>
 <body>
