--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <h2 class="text-center"> PROMOS</h2>
 <div class="card mx-auto text-center" data-aos="flip-left">
     <h3 class="card-title">Card title</h3>
-    <img src="img/1.jpg" class="card-img" alt="...">
+    <img src="img/1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
