--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@
         <img src="img/4.jpg" class="d-block w-25 mx-auto" alt="IMG 1">
         </div>
         <div class="carousel-item">
-        <img src="img/5.jpg" class="d-block w-25 mx-auto" alt="IMG 2">
+        <img src="img/5.jfif" class="d-block w-25 mx-auto" alt="IMG 2">
         </div>
         <div class="carousel-item">
         <img src="img/6.jpg" class="d-block w-25 mx-auto" alt="IMG 3">
+        </div>
+        <div class="carousel-item">
+        <img src="img/6.1.jpg" class="d-block w-25 mx-auto" alt="IMG 4">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
@@ -121,10 +124,10 @@
 <div id="carousel3" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-        <img src="img/7.jpg" class="d-block w-25 mx-auto" alt="IMG 1">
+        <img src="img/7.jfif" class="d-block w-25 mx-auto" alt="IMG 1">
         </div>
         <div class="carousel-item">
-        <img src="img/8.jpg" class="d-block w-25 mx-auto" alt="IMG 2">
+        <img src="img/8.jfif" class="d-block w-25 mx-auto" alt="IMG 2">
         </div>
         <div class="carousel-item">
         <img src="img/9.jpg" class="d-block w-25 mx-auto" alt="IMG 3">
@@ -156,27 +159,24 @@
 <!-- INICIO DE CARDS -->
 <h2 class="text-center"> PROMOS</h2>
 <div class="card mx-auto text-center" data-aos="flip-left">
-    <h3 class="card-title">Card title</h3>
     <img src="img/1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">Buzo de Terciopelo Ultra Suave ¡Luce con estilo y comodidad con nuestro buzo de terciopelo ultra suave! Disponible en tallas S, M, y L, este buzo te mantendrá abrigado y a la moda en cualquier ocasión. Elige entre los colores negro, gris y azul marino para un look versátil y chic. ¡Hazte con el tuyo hoy y destaca con elegancia!</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
 </div>
 
 <div class="card mx-auto text-center" data-aos="fade-up">
-    <h3 class="card-title">Card title</h3>
-    <img src="img/1.jpg" class="card-img-top" alt="...">
+    <img src="img/descuento 1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">Buzo Deportivo Transpirable ¿Buscas un buzo que combine estilo y funcionalidad? Nuestro buzo deportivo transpirable es la elección perfecta. Confeccionado con materiales de alta calidad, este buzo en tallas XS, S y M te brindará la comodidad que necesitas durante tus entrenamientos o para un look casual.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
 </div>
 <div class="card mx-auto text-center" data-aos="fade-left">
-    <h3 class="card-title">Card title</h3>
-    <img src="img/1.jpg" class="card-img-top" alt="...">
+    <img src="img/descuento 2.jpg" class="card-img-top" alt="...">
     <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">Remera Oversize de Algodón Orgánico Experimenta la comodidad sin sacrificar el estilo con nuestra remera oversize de algodón orgánico. En tallas M, L y XL, esta prenda es perfecta para un look relajado y a la moda. Disponible en colores neutros como blanco, gris y negro, esta remera es ideal para combinar con tus jeans favoritos o leggings.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
 </div>
