--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <!-- CARRUCEL 2 INICIO -->
 <h2 class="text-center">REMERAS</h2>
 <div id="carousel2" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
+    <div class="carousel-inner mx-auto">
         <div class="carousel-item active">
         <img src="img/4.jpg" class="d-block w-25 mx-auto" alt="IMG 1">
         </div>
@@ -162,7 +162,7 @@
     <img src="img/1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
     <p class="card-text">Buzo de Terciopelo Ultra Suave ¡Luce con estilo y comodidad con nuestro buzo de terciopelo ultra suave! Disponible en tallas S, M, y L, este buzo te mantendrá abrigado y a la moda en cualquier ocasión. Elige entre los colores negro, gris y azul marino para un look versátil y chic. ¡Hazte con el tuyo hoy y destaca con elegancia!</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">ver mas</a>
     </div>
 </div>
 
@@ -170,14 +170,14 @@
     <img src="img/descuento 1.jpg" class="card-img-top" alt="...">
     <div class="card-body">
     <p class="card-text">Buzo Deportivo Transpirable ¿Buscas un buzo que combine estilo y funcionalidad? Nuestro buzo deportivo transpirable es la elección perfecta. Confeccionado con materiales de alta calidad, este buzo en tallas XS, S y M te brindará la comodidad que necesitas durante tus entrenamientos o para un look casual.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">ver mas</a>
     </div>
 </div>
 <div class="card mx-auto text-center" data-aos="fade-left">
     <img src="img/descuento 2.jpg" class="card-img-top" alt="...">
     <div class="card-body">
     <p class="card-text">Remera Oversize de Algodón Orgánico Experimenta la comodidad sin sacrificar el estilo con nuestra remera oversize de algodón orgánico. En tallas M, L y XL, esta prenda es perfecta para un look relajado y a la moda. Disponible en colores neutros como blanco, gris y negro, esta remera es ideal para combinar con tus jeans favoritos o leggings.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">ver mas</a>
     </div>
 </div>
 <!-- FIN DE CARDS -->
